--- a/01.html
+++ b/01.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <title>createjs sample 01</title>
 <meta name="viewport" content="width=device-width" />
-<meta name="author" content="ym_aozora" />
-<link rel="stylesheet" href="./html5-doctor-reset-stylesheet.min.css" />
+<meta name="author" content="ym-aozora" />
+<link rel="stylesheet" href="./stylesheets/html5-doctor-reset-stylesheet.min.css" />
 <style type="text/css">
 body {
 	max-width: 100%;
@@ -67,7 +67,7 @@ onload = function() {
 	var point = new createjs.Point(window.outerWidth / 2 == 0 ? 200 : window.outerWidth / 2, window.outerHeight / 2 == 0 ? 200 : window.outerHeight / 2);
 
 	// 色
-	var color = createjs.Graphics.getRGB(235, 215, 255);
+	var color = createjs.Graphics.getRGB(235, 225, 255);
 
 	// シェイプ
 	var s = new createjs.Shape();
